fix(ui5-color-picker): align the slider to horizon spec

--- a/packages/main/src/themes/ColorPicker.css
+++ b/packages/main/src/themes/ColorPicker.css
@@ -71,7 +71,7 @@
 
 [ui5-slider]::part(handle)::after {
     content: "";
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     display: block;
     height: 1.25rem;
     border-radius: 1rem;
@@ -190,6 +190,27 @@
 .ui5-color-picker-hue-slider::part(handle):focus {
     outline: var(--_ui5_color_picker_slider_handle_outline_focus);
     outline-offset: 0.0625rem;
+}
+
+.ui5-color-picker-alpha-slider::part(handle):focus::before,
+.ui5-color-picker-hue-slider::part(handle):focus::before {
+    content: "";
+    border: var(--_ui5_color_picker_slider_handle_inline_focus);
+    display: block;
+    height: 1.625rem;
+    border-radius: 1rem;
+    width: 1.05rem;
+    box-sizing: border-box;
+    top: -3px;
+    position: absolute;
+    bottom: 2px;
+    left: -3px;
+    right: -3px;
+}
+
+.ui5-color-picker-alpha-slider::part(handle)::before,
+.ui5-color-picker-hue-slider::part(handle)::before {
+    display: none;
 }
 
 .ui5-color-picker-alpha-slider::part(handle):focus,
